Fixed ratio issue with cropping

--- a/src/sass/imagecrop.scss
+++ b/src/sass/imagecrop.scss
@@ -17,6 +17,8 @@ $border-color: #fff;
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .imgc-handles {
